<resources>
    <string name="app_name">SOCI</string>
    <string name="register">Don\'t you have an account?</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="social_event_planner">SOCIAL EVENT PLANNER</string>
    <string name="SOCI_Events">SOCI Events</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">Registration</string>
    <string name="select_Gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="Female">Female</string>
    <string name="my_events">My Events</string>
    <string name="user_informations">User Informations</string>
</resources>