<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_theme"
    tools:context=".Ui.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="440dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_Tv_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:text="@string/social_event_planner"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/header_Size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/soci_icon" />

        <EditText
            android:id="@+id/login_Et_Email"
            android:layout_width="@dimen/card_Component_Width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_Size" />

        <EditText
            android:id="@+id/login_Et_Password"
            android:layout_width="@dimen/card_Component_Width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="@dimen/text_Size" />

        <Button
            android:id="@+id/Login_Btn_Login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp10"
            android:backgroundTint="@color/material_dynamic_secondary10"
            android:text="@string/login"
            android:textSize="@dimen/text_Size" />

        <TextView
            android:id="@+id/login_Tv_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/DarkBlue"
            android:textSize="@dimen/text_Size"
            android:textStyle="italic" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
